# slide-parser

./: README.md  dev_placeholder_detector.ipynb  main_langchain.ipynb  main_langgraph.ipynb  pyproject.toml
utils/: placeholder_detector.py  slide_extractor.py
